k8s/ingress/ingress.yaml
# Using this ingress when frontend code is changed to "api/" instead of localhost:3000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-organizer-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
